# Master-Thesis-Ray-Tracer

./: CMakeLists.txt  README
character_animation/: Makefile  cal3dadapter.cpp  cal3dadapter.h  cal3dconversions.h  cfgparser.cpp  cfgparser.h  character_animation  character_animation.pro  cluster.cpp  cluster.h  fastrebuild.cpp  fastrebuild.h  fuzzy.cpp  fuzzy.h  main.cpp  refit.cpp  refit.h  testcase.cpp  testcase.h  twolevelrefit.cpp  twolevelrefit.h
character_animation/scripts/: all_anim_frame_times.p  all_anim_ratio_ur.p  all_anim_render_times.p  all_anim_update_times.p  (+13 more)
rtcore/: Makefile  bboxbvh.cpp  bboxbvh.h  boundingbox.cpp  boundingbox.h  bvh.cpp  bvh.h  camera.cpp  camera.h  color.cpp  color.h  constants.h  fuzzybvh.cpp  fuzzybvh.h  hitrecord.cpp  hitrecord.h  image.cpp  image.h  interval.h  matrix.h  matrix4.h  packetraytracer.cpp  packetraytracer.h  partitionalgorithms.cpp  partitionalgorithms.h  point.h  ray.cpp  ray.h  raypacket.cpp  raypacket.h  raytracerbase.cpp  raytracerbase.h  rtcore.pro  sahpartitioner.cpp  sahpartitioner.h  simplebvh.cpp  simplebvh.h  simpleshader.h  simpletimer.h  stats.h  (+6 more)
staticrt/: Makefile  benchmark.sh  ra2parser.cpp  ra2parser.h  rtstatic  rtstatic.cpp  rtstatic.pro
testsuite/: Makefile  bboxbvh_test.cpp  bboxbvh_test.h  boundingbox_test.cpp  boundingbox_test.h  cal3dadapter_test.cpp  cal3dadapter_test.h  camera_test.cpp  camera_test.h  interval_test.cpp  interval_test.h  matrix4_test.cpp  matrix4_test.h  matrix_test.cpp  matrix_test.h  partitionalgorithms_test.cpp  partitionalgorithms_test.h  point_test.cpp  point_test.h  raypacket_test.cpp  raypacket_test.h  testrunner.cpp  testsuite  testsuite.pro  triangle_test.cpp  triangle_test.h  utils_test.cpp  utils_test.h  vector_test.cpp  vector_test.h
